--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,6 +21,7 @@
 
     amend = commit --amend --no-edit
     undo = reset --soft HEAD~
+    unstage = reset HEAD
     unstash = stash pop
 
     dlast = diff HEAD^ HEAD
