--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,5 +32,7 @@
 [core]
     editor = 'nvim'
     excludesfile = ~/.gitignore_global
+    autocrlf = false
+    eol = lf
 [credential]
     helper = manager
