Update git aliases

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -27,10 +27,8 @@
 
     pushnew = push -u origin HEAD
 
-    dlast = diff HEAD^ HEAD
-
     prune-branches = !sh ~/.git-alias/prune-branches
-    bprune = prune-branches
+    prune = prune-branches
 
     # http://blog.blindgaenger.net/advanced_git_aliases.html
     this = !git init && git add . && git commit -m \"Initial commit\"
