Switch back to the git bprune alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,7 +28,7 @@
     pushnew = push -u origin HEAD
 
     prune-branches = !sh ~/.git-alias/prune-branches
-    prune = prune-branches
+    bprune = prune-branches
 
     # http://blog.blindgaenger.net/advanced_git_aliases.html
     this = !git init && git add . && git commit -m \"Initial commit\"
