--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -1,2 +1,3 @@
-scripts-prepend-node-path=true
-init-author-name=Athir Saleem
+scripts-prepend-node-path = true
+init-author-name = Athir Saleem
+registry = http://registry.npmjs.org
