--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -44,3 +44,8 @@
 [credential]
     helper = libsecret
     helper = manager
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
